assets/style/main.css
@charset "utf-8";

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.wrapper {
    width: 90%;
    max-width: 1200px;
    height: 100px;
    margin-inline: auto;
    position: relative;
    margin-top: 5rem;
    overflow: hidden;
    mask-image: linear-gradient(
        to right,
        rgba(0, 0, 0, 0),
        rgba(0, 0, 0, 1) 20%,
        rgba(0, 0, 0, 1) 80%,
        rgba(0, 0, 0, 0)
    );
}

@keyframes scrollLeft {
    to {
        left: -100px;
    }
}

.item {
    width: 200px;
    height: 100px;
    background-color: blue;
    border-radius: 10px;
    position: absolute;
    left: 100%;
    animation: scrollLeft 30s linear infinite;
}

.item-1 {
    animation-delay: calc(30s / 8 * (8 - 1) * -1);
}

.item-2 {
    animation-delay: calc(30s / 8 * (8 - 2) * -1);
}

.item-3 {
    animation-delay: calc(30s / 8 * (8 - 3) * -1);
}

.item-4 {
    animation-delay: calc(30s / 8 * (8 - 4) * -1);
}

.item-5 {
    animation-delay: calc(30s / 8 * (8 - 5) * -1);
}

.item-6 {
    animation-delay: calc(30s / 8 * (8 - 6) * -1);
}

.item-7 {
    animation-delay: calc(30s / 8 * (8 - 7) * -1);
}

.item-8 {
    animation-delay: calc(30s / 8 * (8 - 8) * -1);
}

